# sidex

./: .git-blame-ignore-revs  .gitignore  .tool-versions  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PARITY.md  PARITY.yaml  README.md  biome.json  bunfig.toml  chunk-manifest.baseline.json  lefthook.yml  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: audit.yml  build.yml  fmt.yml  lint-js.yml  lint-rust.yml  release.yml  test.yml  udeps.yml
apps/desktop/: Cargo.toml  tauri.conf.json  tauri.sidex-ui.conf.json
apps/desktop/extension-host/: host.cjs
apps/desktop/src/: lib.rs  main.rs
apps/desktop/src/commands/: ext_host.rs  extension_platform.rs  git.rs  keymap.rs  path.rs
apps/workbench/: index.html  package.json  vite.config.ts
apps/workbench/public/public/: builtin-extensions.js
apps/workbench/src/: bootstrap-globals.ts  main.ts
crates/auth/: Cargo.toml
crates/dap/: Cargo.toml
crates/db/: Cargo.toml
crates/extension-api/: Cargo.toml
crates/extension-sdk/: Cargo.toml
crates/extension-sdk/wit/: world.wit
crates/extensions/: Cargo.toml
crates/git/: Cargo.toml
crates/git/src/: lib.rs  operations.rs
crates/keymap/: Cargo.toml
crates/lsp/: Cargo.toml
crates/lsp/src/: code_action_engine.rs  conversion.rs  inlay_hints.rs
crates/profiles/: Cargo.toml
crates/remote/: Cargo.toml
crates/settings/: Cargo.toml
crates/sidex-db/src/: db.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: bracket.rs  parser.rs
crates/tasks/: Cargo.toml
crates/terminal/: Cargo.toml
crates/terminal/src/: emulator.rs  link_detection.rs
crates/text/: Cargo.toml
crates/textmate/: Cargo.toml
crates/theme/: Cargo.toml
crates/update/: Cargo.toml
crates/workspace/: Cargo.toml
docs/superpowers/plans/: 2026-07-20-bun-migration.md  2026-07-23-parity-matrix.md  2026-07-23-timeline.md
docs/superpowers/specs/: 2026-07-20-bun-migration-design.md  2026-07-23-parity-matrix-design.md  2026-07-23-timeline-design.md
examples/hello-extension/: Cargo.toml
extensions-wasm/: Cargo.toml
extensions-wasm/cpp-language-extension/src/: lib.rs
extensions-wasm/css-language-extension/src/: lib.rs
extensions-wasm/go-language-extension/src/: lib.rs
extensions-wasm/python-language-extension/src/: lib.rs
extensions-wasm/rust-language-extension/src/: lib.rs
extensions-wasm/typescript-language-extension/src/: lib.rs
infrastructure/marketplace-proxy/: README.md  package.json
infrastructure/marketplace-proxy/src/: compat.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/commands/: extension_platform.rs
src/vs/base/: amdX.ts
src/vs/base/browser/: markdownRenderer.ts
src/vs/base/common/: actions.ts  errorMessage.ts
src/vs/editor/: editor.worker.start.ts
src/vs/editor/browser/: coreCommands.ts  dataTransfer.ts  editorDom.ts  editorExtensions.ts  observableCodeEditor.ts
src/vs/editor/common/: editorCommon.ts  editorContextKeys.ts  inputMode.ts  languageFeatureRegistry.ts  (+6 more)
src/vs/workbench/: workbench.web.main.internal.ts
wasm/: Cargo.toml
wasm/hash/: Cargo.toml
wasm/scroll/: Cargo.toml
wasm/tfidf/: Cargo.toml
wasm/tfidf/src/: lib.rs
(+1243 files in other folders)
