[workspace]
resolver = "2"
members = [
  "crates/*",
  "src-tauri",
  "sidex-extension-sdk",
]
exclude = ["extensions-wasm", "wasm"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.91.0"
license = "MIT"
repository = "https://github.com/sidenai/sidex"

[workspace.dependencies]
# Internal crates
sidex-text = { path = "crates/text" }
sidex-syntax = { path = "crates/syntax" }
sidex-lsp = { path = "crates/lsp" }
sidex-workspace = { path = "crates/workspace" }
sidex-terminal = { path = "crates/terminal" }
sidex-git = { path = "crates/git" }
sidex-extensions = { path = "crates/extensions" }
sidex-extension-api = { path = "crates/extension-api" }
sidex-theme = { path = "crates/theme" }
sidex-keymap = { path = "crates/keymap" }
sidex-settings = { path = "crates/settings" }
sidex-db = { path = "crates/db" }
sidex-remote = { path = "crates/remote" }
sidex-extension-sdk = { path = "sidex-extension-sdk" }
sidex-tasks = { path = "crates/tasks" }
sidex-dap = { path = "crates/dap" }
sidex-update = { path = "crates/update" }
sidex-profiles = { path = "crates/profiles" }
sidex-auth = { path = "crates/auth" }
sidex-textmate = { path = "crates/textmate" }

# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# Text
ropey = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
regex = "1"
memchr = "2"

# Syntax & Language
tree-sitter = "0.24"

# File system
notify = { version = "7", features = ["macos_fsevent"] }
walkdir = "2"
globset = "0.4"
ignore = "0.4"

# Terminal
portable-pty = "0.8"
vte = "0.13"

# Git
gix = { version = "0.68", default-features = false }

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Remote
russh = "0.46"
bollard = "0.18"
tokio-tungstenite = "0.26"

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls"] }

# Concurrency
crossbeam = "0.8"
dashmap = "6"
rayon = "1"
parking_lot = "0.12"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
